[package]
name = "rsx-demo"
version = "0.1.0"
authors = ["Victor Porof <victor.porof@gmail.com>"]

# [lib]
# name = "rsx_demo"
# path = "src/main.rs"
# crate-type = ["staticlib", "cdylib"]

[features]
default = ["target-native"]

target-native = ["rsx-embedding/native-embedding"]
target-web = ["rsx-embedding/web-embedding"]
target-ios = ["rsx-embedding/ios-embedding"]

[profile.dev]
codegen-units = 4

[profile.release]
opt-level = 3
lto = true

[dependencies]
rsx = { git = "https://github.com/victorporof/rsx.git", default-features = false }
# rsx-embedding = { git = "https://github.com/victorporof/rsx-embedding.git", default-features = false }
rsx-embedding = { path = "../reactenstein/rsx-embedding/rsx-targets", default-features = false }
